flat feet calculator

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#Contact-us">Contact Us</a>
                             </li>
+                            <!-- <li class="nav-item">
+                                <a class="nav-link" href="flatfeetprediction.html">Flat Feet Predection</a>
+                            </li> -->
 
                             <li class="nav-item dropdown">
                                 <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
@@ -136,7 +139,7 @@
 
                                         </a>
                                     </li>
-                                     <li>
+                                    <li>
                                         <a class="dropdown-item" target="_blank"
                                             href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
                                             Exercises
@@ -639,7 +642,7 @@
                                 <p class="fw-semibold mt-2 mb-0">Pediatric Physiotherapist</p>
                             </div>
                             <div class="service-item text-center">
-                                <img src="/assets/image/services/PreAndPostSurgeryRehabilitation.webp"
+                                <img src="/assets/image/services/PhysiotherapyClinic.webp"
                                     alt="Prenatal and Postnatal Rehabilitation" class="img-fluid rounded-4 w-100">
                                 <p class="fw-semibold mt-2 mb-0">Prenatal and Postnatal Rehabilitation (Approved by
                                     IAFT, Mangaluru)</p>
@@ -680,9 +683,6 @@
                                 <p class="fw-semibold mt-2 mb-0">Geriatric Care</p>
                             </div>
                         </div>
-
-
-
                     </div>
                 </div>
             </div>
@@ -1853,7 +1853,8 @@
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3">
