--- a/flatfeetprediction.html
+++ b/flatfeetprediction.html
@@ -93,110 +93,111 @@
 
 <body class="bg-light">
     <div class="d-flex flex-column min-vh-100">
-      <header class="bg-white shadow-sm">
-        <div style="background-color: #153C33;">
-            <div class="container py-2">
-                <div class="d-flex justify-content-between align-items-center small text-white">
-                    <div>
-                        <span>
-                            <a href="tel:+919610164989" class="text-white">
-                                <i class="material-icons text-sm align-middle">call</i>
+        <header class="bg-white shadow-sm">
+            <div style="background-color: #153C33;">
+                <div class="container py-2">
+                    <div class="d-flex justify-content-between align-items-center small text-white">
+                        <div>
+                            <span>
+                                <a href="tel:+919610164989" class="text-white">
+                                    <i class="material-icons text-sm align-middle">call</i>
+                                </a>
+                                +91-9610164989
+                            </span>
+                        </div>
+                        <div class="d-flex gap-1 gap-md-3">
+                            <a href="https://www.instagram.com/mittalsphysiofit/" target="_blank" class="text-white">
+                                <i class="fab fa-instagram fa-lg"></i>
                             </a>
-                            +91-9610164989
-                        </span>
-                    </div>
-                    <div class="d-flex gap-1 gap-md-3">
-                        <a href="https://www.instagram.com/mittalsphysiofit/" target="_blank" class="text-white">
-                            <i class="fab fa-instagram fa-lg"></i>
-                        </a>
-                        <a href="https://www.facebook.com/mittal.sachendra891" target="_blank" class="text-white">
-                            <i class="fab fa-brands fa-facebook"></i>
-                        </a>
-                        <a href="https://www.youtube.com/@MMC-Allmedicalsubjects" target="_blank" class="text-white">
-                            <i class="fab fa-youtube fa-lg"></i>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="https://classplusapp.com/w/mittalsmedicalclassesjigls" target="_blank"
-                            class="btn btn-danger d-inline-flex align-items-center shadow-sm rounded-pill live-btn">
-                            <img src="/assets/image/live-class.gif" alt="Live" class="me-2"
-                                style="width:14px; height:14px; border-radius: 50%;">
-                            Live Classes
-                        </a>
+                            <a href="https://www.facebook.com/mittal.sachendra891" target="_blank" class="text-white">
+                                <i class="fab fa-brands fa-facebook"></i>
+                            </a>
+                            <a href="https://www.youtube.com/@MMC-Allmedicalsubjects" target="_blank"
+                                class="text-white">
+                                <i class="fab fa-youtube fa-lg"></i>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="https://classplusapp.com/w/mittalsmedicalclassesjigls" target="_blank"
+                                class="btn btn-danger d-inline-flex align-items-center shadow-sm rounded-pill live-btn">
+                                <img src="/assets/image/live-class.gif" alt="Live" class="me-2"
+                                    style="width:14px; height:14px; border-radius: 50%;">
+                                Live Classes
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="border-top">
-            <nav class="navbar navbar-expand-lg bg-white py-0">
-                <div class="container">
-                    <a class="navbar-brand" href="index.html">
-                        <img alt="CB Physiotherapy Logo" src="./assets/image/Logo.webp" />
-                    </a>
-                    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
-                        class="navbar-toggler" data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
-                        <i class="material-icons">menu</i>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                            <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
+            <div class="border-top">
+                <nav class="navbar navbar-expand-lg bg-white py-0">
+                    <div class="container">
+                        <a class="navbar-brand" href="index.html">
+                            <img alt="CB Physiotherapy Logo" src="./assets/image/Logo.webp" />
+                        </a>
+                        <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+                            class="navbar-toggler" data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
+                            <i class="material-icons">menu</i>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                                <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html#Services">Services</a>
-                            </li>
-                            <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-                            <li class="nav-item"><a href="index.html#Blog" class="nav-link">Blog</a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#Services">Services</a>
+                                </li>
+                                <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
+                                <li class="nav-item"><a href="index.html#Blog" class="nav-link">Blog</a></li>
 
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
-                            </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
+                                </li>
 
-                            <li class="nav-item dropdown">
-                                <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
-                                    href="" id="navbarDropdown" role="button">
-                                    Download
-                                </a>
-                                <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-                                    <li>
-                                        <a class="dropdown-item" target="_blank"
-                                            href="https://drive.google.com/file/d/1bRkVtug0i-sa3-pBaxMUQ1kaseH0frIm/view">Back
-                                            Exercises</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" target="_blank"
-                                            href="https://drive.google.com/file/d/1sIbLBACU2V6O8OFlFiyEIR5uUG358jnc/view">Neck
-                                            Exercises
+                                <li class="nav-item dropdown">
+                                    <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                                        href="" id="navbarDropdown" role="button">
+                                        Download
+                                    </a>
+                                    <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+                                        <li>
+                                            <a class="dropdown-item" target="_blank"
+                                                href="https://drive.google.com/file/d/1bRkVtug0i-sa3-pBaxMUQ1kaseH0frIm/view">Back
+                                                Exercises</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" target="_blank"
+                                                href="https://drive.google.com/file/d/1sIbLBACU2V6O8OFlFiyEIR5uUG358jnc/view">Neck
+                                                Exercises
 
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" target="_blank"
-                                            href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
-                                            Exercises
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" target="_blank"
+                                                href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
+                                                Exercises
 
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
 
-                            <li class="nav-item position-relative">
-                                <a class="nav-link" href="index.html#workshop">
-                                    Workshops
-                                </a>
-                                <!-- New badge above -->
-                                <span
-                                    class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
-                                    New
-                                </span>
-                            </li>
-                        </ul>
+                                <li class="nav-item position-relative">
+                                    <a class="nav-link" href="index.html#workshop">
+                                        Workshops
+                                    </a>
+                                    <!-- New badge above -->
+                                    <span
+                                        class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
+                                        New
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </nav>
-        </div>
-    </header>
+                </nav>
+            </div>
+        </header>
         <main class="flex-grow-1 container py-5">
             <div class="card mx-auto" style="max-width: 540px;">
                 <div class="card-body p-5">
@@ -263,7 +264,7 @@
             }
 
             // Calculate arch height difference using the formula
-            archHeightDifference = (0.731 * bmi - 0.471 * height - 8.93) / 100;
+            archHeightDifference = 0.731 * bmi - 0.471 * height / 100;
 
             // Show the result footer and update the result in the DOM
             resultFooter.classList.remove('d-none');
