--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
             <h1 class="display-4 fw-bold text-dark">About Us</h1>
             <nav aria-label="breadcrumb" class="mt-3">
                 <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a class="text-primary text-decoration-none" href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-primary text-decoration-none" href="index.html">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">About Us</li>
                 </ol>
             </nav>
