--- a/gallery.html
+++ b/gallery.html
@@ -104,6 +104,7 @@
 
         /* Responsive adjustments */
         @media (max-width: 576px) {
+
             .gallery-img,
             .gallery-video {
                 height: 150px;
@@ -112,7 +113,7 @@
     </style>
 </head>
 
-<body class="bg-light">
+<body>
     <header class="bg-white shadow-sm">
         <div style="background-color: #153C33;">
             <div class="container py-2">
@@ -173,15 +174,18 @@
                                 <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
                                     <li>
                                         <a class="dropdown-item" target="_blank"
-                                            href="https://drive.google.com/file/d/1bRkVtug0i-sa3-pBaxMUQ1kaseH0frIm/view">Back Exercises</a>
+                                            href="https://drive.google.com/file/d/1bRkVtug0i-sa3-pBaxMUQ1kaseH0frIm/view">Back
+                                            Exercises</a>
                                     </li>
                                     <li>
                                         <a class="dropdown-item" target="_blank"
-                                            href="https://drive.google.com/file/d/1sIbLBACU2V6O8OFlFiyEIR5uUG358jnc/view">Neck Exercises</a>
+                                            href="https://drive.google.com/file/d/1sIbLBACU2V6O8OFlFiyEIR5uUG358jnc/view">Neck
+                                            Exercises</a>
                                     </li>
                                     <li>
                                         <a class="dropdown-item" target="_blank"
-                                            href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee Exercises</a>
+                                            href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
+                                            Exercises</a>
                                     </li>
                                 </ul>
                             </li>
@@ -199,30 +203,47 @@
         </div>
     </header>
 
+    <header class="bg-light py-5 text-center">
+        <div class="container">
+            <h1 class="display-4 fw-bold text-dark">Gallery</h1>
+            <nav aria-label="breadcrumb" class="mt-3">
+                <ol class="breadcrumb justify-content-center">
+                    <li class="breadcrumb-item"><a class="text-primary text-decoration-none" href="index.html">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Gallery</li>
+                </ol>
+            </nav>
+        </div>
+    </header>
     <main>
-        <section class="bg-light py-5 position-relative">
+        <!-- <section class="bg-light py-5 position-relative">
             <div class="container px-4 text-center">
                 <h1 class="display-4 fw-bold text-dark">Gallery</h1>
             </div>
-        </section>
+        </section> -->
 
         <div class="container py-5">
             <!-- Tab Navigation -->
             <ul class="nav nav-tabs mb-4" id="galleryTabs" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="clinic-tab" data-bs-toggle="tab" data-bs-target="#clinic" type="button" role="tab" aria-controls="clinic" aria-selected="true">Clinic</button>
+                    <button class="nav-link active" id="clinic-tab" data-bs-toggle="tab" data-bs-target="#clinic"
+                        type="button" role="tab" aria-controls="clinic" aria-selected="true">Clinic</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="awards-tab" data-bs-toggle="tab" data-bs-target="#awards" type="button" role="tab" aria-controls="awards" aria-selected="false">Awards / Research</button>
+                    <button class="nav-link" id="awards-tab" data-bs-toggle="tab" data-bs-target="#awards" type="button"
+                        role="tab" aria-controls="awards" aria-selected="false">Awards / Research</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="camps-tab" data-bs-toggle="tab" data-bs-target="#camps" type="button" role="tab" aria-controls="camps" aria-selected="false">Camps</button>
+                    <button class="nav-link" id="camps-tab" data-bs-toggle="tab" data-bs-target="#camps" type="button"
+                        role="tab" aria-controls="camps" aria-selected="false">Camps</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="informative-tab" data-bs-toggle="tab" data-bs-target="#informative" type="button" role="tab" aria-controls="informative" aria-selected="false">Informative Post</button>
+                    <button class="nav-link" id="informative-tab" data-bs-toggle="tab" data-bs-target="#informative"
+                        type="button" role="tab" aria-controls="informative" aria-selected="false">Informative
+                        Post</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="patent-tab" data-bs-toggle="tab" data-bs-target="#patent" type="button" role="tab" aria-controls="patent" aria-selected="false">Patent and Copyrights</button>
+                    <button class="nav-link" id="patent-tab" data-bs-toggle="tab" data-bs-target="#patent" type="button"
+                        role="tab" aria-controls="patent" aria-selected="false">Patent and Copyrights</button>
                 </li>
             </ul>
 
@@ -412,7 +433,8 @@
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3">
