--- a/flatfeetprediction.html
+++ b/flatfeetprediction.html
@@ -411,7 +411,7 @@
 
             // Add interpretation based on Navicular Drop criteria
 
-            resultInterpretation.innerHTML = `After calculating, if you find your arch height drop is <span style="font-weight : bold"> equal to or more than 10 mm, </span> then you should consider flat feet. <br> Book a consultation at Mittal’s Physiofit Clinic and<p class="text-center mt-3">
+            resultInterpretation.innerHTML = `After calculating, if you find your Navicular drop drop is <span style="font-weight : bold"> equal or more than 10 mm, </span> then you should consider Acquired flat feet. <br> Book a consultation at Mittal’s Physiofit Clinic and<p class="text-center mt-3">
                         <a href="bookappoitment.html" class="cta-button-ap mt-4">✨ Schedule  Your Appointment Today</a>
                     </p>`
             // if (archHeightDifference >= 10) {
