--- a/index.html
+++ b/index.html
@@ -1625,7 +1625,7 @@
                             style="text-decoration: none;">
                             <div class="card shadow-sm h-100">
                                 <img alt="Physiotherapy can help you get back on your feet" class="card-img-top"
-                                    src="https://lh3.googleusercontent.com/aida-public/AB6AXuAkH1pWvgNHG-csGQxLb5o4fqeMyNFo7BFgTLGcQmq9TLNPYg0txbughUcga8WFPpCsy83NDvd9OO9gbINFjNiUiM8WGgAz1fNIuY_ExVURnboNcfBpYicRF-ZoXZ8FMV1uZrDAbzS7dBhtS89VTqqxcmzQ-WbC8RL1cyDlwIq8Qg7fOBqHkYji_8dyWEZr7ZXudGHeLomCWbzXvXrusMK5F-kOsKtv14YOfesOtsRpTQC2y_0PH9f0_s3GzvrAdLudRaq_XneodrA"
+                                    src="./assets/image/services/OrthoPhysiotherapist.webp"
                                     style="height: 200px; object-fit: cover;" />
                                 <div class="card-body">
                                     <h3 class="card-title fw-semibold fs-5 mb-2">Back Pain and Its Treatment Through
@@ -1642,20 +1642,17 @@
 
 
                     <div class="col-md-4">
-                        <a href="Post-Operative-Physiotherapy-Healing-Beyond-Surgery.html" class="d-flex"
+                        <a href="prenatal-and-postnatal-exercises.html" class="d-flex"
                             style="text-decoration: none;">
                             <div class="card shadow-sm h-100">
                                 <img alt="Physiotherapy can help patient recover from COVID-19" class="card-img-top"
-                                    src="https://lh3.googleusercontent.com/aida-public/AB6AXuBcQLsq1EIrrN29_B6R8_yuRAY0EiSQ5OCvgk_KIsAQmXrdul31TEW03bHSTZVUyeU2NlV5uJtsEeMktOZfcRZhuTA9qyOM8FCqDgZW8KRXv79DCmhKnrvTDnva4RL_h5eqwOOYNXKmkNRoOynm5I0H91j8hBeatVOW3hyE5PlC6wnRv_Gc8qCerQPL4m8PhZPDD2KF6dQN2-eAURAmA0OxM4x7JFF-JCFl5uC6hUn9EjLtOUWRiV8wsSwEdNSB9e0b0AAykwnaG18"
+                                    src="./assets/image/services/PhysiotherapyClinic.webp"
                                     style="height: 200px; object-fit: cover;" />
                                 <div class="card-body">
-                                    <h3 class="card-title fw-semibold fs-5 mb-2">Post-Operative Physiotherapy: Healing
-                                        Beyond
-                                        Surgery
+                                    <h3 class="card-title fw-semibold fs-5 mb-2">Prenatal and Postnatal Exercises from pregnancy to postpartum recovery
+                                        
                                         ...</h3>
-                                    <p class="card-text text-muted small">After surgery, the body undergoes significant
-                                        changes: muscles may weaken, joints may become stiff, and movements may feel
-                                        restricted.</p>
+                                    <p class="card-text text-muted small">Motherhood is one of life’s most beautiful journeys, but it also brings many physical and emotional changes.</p>
                                 </div>
                             </div>
                         </a>
