--- a/bookappoitment.html
+++ b/bookappoitment.html
@@ -57,7 +57,7 @@
 </head>
 
 <body class="text-dark">
-   <header class="bg-white shadow-sm">
+    <header class="bg-white shadow-sm">
         <div style="background-color: #153C33;">
             <div class="container py-2">
                 <div class="d-flex justify-content-between align-items-center small text-white">
@@ -135,7 +135,7 @@
 
                                         </a>
                                     </li>
-                                     <li>
+                                    <li>
                                         <a class="dropdown-item" target="_blank"
                                             href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
                                             Exercises
@@ -245,9 +245,11 @@
                                                 <span class="input-group-text icon-position"><span
                                                         class="material-icons">schedule</span></span>
                                                 <input class="form-control form-control-lg" id="timeslot"
-                                                    name="timeslot" onblur="(this.type='text')"
-                                                    onfocus="(this.type='time')" placeholder="Select TimeSlot"
-                                                    type="text" />
+                                                    name="timeslot" placeholder="Select Date and Time"
+                                                    type="datetime-local" required />
+                                            </div>
+                                            <div id="timeslot-error" class="text-danger small mt-2"
+                                                style="display: none;">Please select a time between 4:00 PM and 8:30 PM.
                                             </div>
                                         </div>
                                         <div class="col-12">
@@ -318,7 +320,8 @@
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -359,6 +362,25 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+    <script>
+        document.getElementById('timeslot').addEventListener('change', function () {
+            const selectedDateTime = new Date(this.value);
+            const hours = selectedDateTime.getHours();
+            const minutes = selectedDateTime.getMinutes();
+            const errorElement = document.getElementById('timeslot-error');
+
+            // Check if time is between 16:00 (4:00 PM) and 20:30 (8:30 PM)
+            const isValidTime = (hours > 16 || (hours === 16 && minutes >= 0)) && (hours < 20 || (hours === 20 && minutes <= 30));
+
+            if (!isValidTime) {
+                errorElement.style.display = 'block';
+                this.value = ''; // Clear invalid selection
+            } else {
+                errorElement.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 
 </html>
