--- a/about.html
+++ b/about.html
@@ -169,7 +169,8 @@
             <h1 class="display-4 fw-bold text-dark">About Us</h1>
             <nav aria-label="breadcrumb" class="mt-3">
                 <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a class="text-primary text-decoration-none" href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-primary text-decoration-none" href="index.html">Home</a>
+                    </li>
                     <li class="breadcrumb-item active" aria-current="page">About Us</li>
                 </ol>
             </nav>
@@ -307,7 +308,7 @@
                 </div>
 
                 <hr />
-                <div class="card shadow mb-4">
+                <div class="card shadow mb-4" id="dr-sachendra-mittal">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div class="ratio ratio-4x3">
@@ -353,10 +354,10 @@
                                 <strong>
                                     Dr. Mittal is also a well-known educator in the field of Anatomy and medical
                                     sciences, </strong>
-                                    having mentored numerous healthcare professionals. His ability to connect academic
-                                    insight
-                                    with practical patient care is what truly sets him apart.
-                                
+                                having mentored numerous healthcare professionals. His ability to connect academic
+                                insight
+                                with practical patient care is what truly sets him apart.
+
                             </p>
                             <p class="text-muted">
                                 With his commitment to excellence and innovation, Dr. Sachendra Mittal continues to lead
