--- a/prenatal-and-postnatal-exercises.html
+++ b/prenatal-and-postnatal-exercises.html
@@ -240,7 +240,7 @@
                     <h2 class="section-title">Final Words</h2>
                     <p class="mb-4">Motherhood is a beautiful journey, and at Mittal’s Physiofit Clinic, Jaipur, we are here to support you every step of the way. Our prenatal and postnatal exercise programs are designed to help you stay strong, confident, and healthy throughout pregnancy and beyond.</p>
                     <p class="text-center mb-5">
-                        <a href="bookappoitment.html" class="cta-button">✨ Book Your Prenatal & Postnatal Program Today</a>
+                        <a href="bookappoitment.html" class="cta-button">✨ Book Your Appointment Today</a>
                     </p>
                 </div>
             </div>
